--- a/src/app/guest/homepage/homepage.component.html
+++ b/src/app/guest/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <p-menubar [model]="items">
+  <p-menubar>
     <ng-template pTemplate="start">
       <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
     </ng-template>
