--- a/src/app/guest/homepage/homepage.component.html
+++ b/src/app/guest/homepage/homepage.component.html
@@ -1,12 +1,42 @@
-<div class="card">
-  <p-menubar>
-    <ng-template pTemplate="start">
-      <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
-    </ng-template>
-    <ng-template pTemplate="end">
-      <input type="text" pInputText placeholder="Search" class="w-full" />
-    </ng-template>
-  </p-menubar>
+<div class="mb-3">
+  <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()" styleClass="p-button-text"></p-button>
+  <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>
+  <p-button type="button" icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()" styleClass="p-button-text"></p-button>
 </div>
+<div class="card">
+  <p-table
+    [value]="services"
+    [paginator]="true"
+    [rows]="5"
+    [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[10, 25, 50]"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width:20%">Name</th>
+        <th style="width:20%">Cost</th>
+        <th style="width:20%">Description</th>
+        <th style="width:20%">Name of the provider</th>
+        <th style="width:20%">Email of the provider</th>
 
-<router-outlet></router-outlet>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-service>
+      <tr>
+        <td>{{ service.name }}</td>
+        <td>€{{ service.cost }}</td>
+        <td>{{ service.description }}</td>
+        <td>{{ service.userResponse.name }}</td>
+        <td>{{ service.userResponse.email }}</td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="paginatorleft">
+      <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+    </ng-template>
+    <ng-template pTemplate="paginatorright">
+      <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
+    </ng-template>
+  </p-table>
+</div>
