--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -56,18 +56,26 @@
 
         <!-- Login and Register buttons -->
         <li>
-          <button
-            class="block py-2 px-4 text-sm text-white bg-blue-500 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+          <a
+            (click)="onHamburgerItemClick()"
+            routerLink="/login"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
           >
             Login
-          </button>
+          </a>
         </li>
         <li>
-          <button
-            class="block py-2 px-4 text-sm text-white bg-green-500 rounded-md hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500"
+          <a
+            (click)="onHamburgerItemClick()"
+            routerLink="/register"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
           >
             Register
-          </button>
+          </a>
         </li>
       </ul>
     </div>
