navigation changes for each user

--- a/src/app/guest/homepage/homepage.component.html
+++ b/src/app/guest/homepage/homepage.component.html
@@ -28,8 +28,8 @@
         <td>{{ service.name }}</td>
         <td>€{{ service.cost }}</td>
         <td>{{ service.description }}</td>
-        <td>{{ service.userResponse.name }}</td>
-        <td>{{ service.userResponse.email }}</td>
+        <td>{{ service.serviceProvider.name }}</td>
+        <td>{{ service.serviceProvider.email }}</td>
       </tr>
     </ng-template>
     <ng-template pTemplate="paginatorleft">
