--- a/src/app/admin/admin-homepage/admin-homepage.component.html
+++ b/src/app/admin/admin-homepage/admin-homepage.component.html
@@ -1,1 +1,53 @@
-<p>admin-homepage works!</p>
+<div class="centered-container">
+  <h2>All Services</h2>
+  <div class="mb-3">
+    <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()"
+              styleClass="p-button-text"></p-button>
+    <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>
+    <p-button type="button" icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()"
+              styleClass="p-button-text"></p-button>
+  </div>
+  <div class="card">
+    <p-table
+      [value]="services"
+      [paginator]="true"
+      [rows]="5"
+      [showCurrentPageReport]="true"
+      [tableStyle]="{ 'min-width': '50rem' }"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+      [rowsPerPageOptions]="[10, 25, 50]"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width:20%">Name</th>
+          <th style="width:20%">Service provider</th>
+          <th style="width:20%">Cost</th>
+          <th style="width:20%">Description</th>
+          <th style="width:20%">Actions</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-service>
+        <tr>
+          <td>{{ service.serviceProvider.name }}</td>
+          <td>{{ service.name }}</td>
+          <td>€{{ service.cost }}</td>
+          <td>{{ service.description }}</td>
+          <td class="px-4 py-2">
+            <button pButton type="button" icon="pi pi-trash"
+                    class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded"
+                    (click)="deleteService(service.id)">
+              Delete
+            </button>
+          </td>
+
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="paginatorleft">
+        <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+      </ng-template>
+      <ng-template pTemplate="paginatorright">
+        <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
