--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,6 +1,12 @@
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
-    <a href="#" class="flex items-center">
+    <a *ngIf="isBasicUser" href="/basic_user" class="flex items-center">
+      <span class="self-center text-xl font-semibold">Service Platform</span>
+    </a>
+    <a *ngIf="isAdminUser" href="/admin" class="flex items-center">
+      <span class="self-center text-xl font-semibold">Service Platform</span>
+    </a>
+    <a *ngIf="!isUserLoggedIn()" href="/guest" class="flex items-center">
       <span class="self-center text-xl font-semibold">Service Platform</span>
     </a>
     <button
@@ -30,32 +36,45 @@
       <ul
         class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white "
       >
-        <!-- Links -->
-        <li>
+        <li *ngIf="isBasicUser">
           <a
             (click)="onHamburgerItemClick()"
-            routerLink="/guest"
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            class="block py-2 pr-4 pl-3 rounded "
-          >
-            Home
-          </a>
-        </li>
-        <li>
-          <a
-            (click)="onHamburgerItemClick()"
-            routerLink="/"
+            routerLink="/basic_user/services"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 pr-4 pl-3 rounded"
           >
-            Bookings
+            My Services
           </a>
         </li>
 
+        <li *ngIf="isBasicUser">
+          <a
+            (click)="onHamburgerItemClick()"
+            routerLink="/basic_user/bookings"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
+          >
+            My Bookings
+          </a>
+        </li>
+
+        <li *ngIf="isAdminUser">
+          <a
+            (click)="onHamburgerItemClick()"
+            routerLink="/admin"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
+          >
+            All Services
+          </a>
+        </li>
+
+
         <!-- Login and Register buttons -->
-        <li>
+        <li *ngIf="!isUserLoggedIn()">
           <a
             (click)="onHamburgerItemClick()"
             routerLink="/login"
@@ -66,7 +85,7 @@
             Login
           </a>
         </li>
-        <li>
+        <li *ngIf="!isUserLoggedIn()">
           <a
             (click)="onHamburgerItemClick()"
             routerLink="/register"
@@ -76,6 +95,13 @@
           >
             Register
           </a>
+        <li *ngIf="isUserLoggedIn()">
+          <button
+            class="block py-2 px-4 rounded text-sm font-medium text-white bg-red-500 hover:bg-red-600"
+            (click)="logout()"
+          >
+            Logout
+          </button>
         </li>
       </ul>
     </div>
