--- a/src/app/basic-user/my-bookings/my-bookings.component.html
+++ b/src/app/basic-user/my-bookings/my-bookings.component.html
@@ -12,7 +12,7 @@
     >
       <ng-template pTemplate="header">
         <tr>
-          <th style="width:25%">Description</th>
+          <th style="width:25%">Notes</th>
           <th style="width:25%">Date and time</th>
           <th style="width:25%">Service</th>
           <th style="width:25%">Service provider</th>
