--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -39,6 +39,18 @@
         <li *ngIf="isBasicUser">
           <a
             (click)="onHamburgerItemClick()"
+            routerLink="/basic_user/all"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
+          >
+            All Services
+          </a>
+        </li>
+
+        <li *ngIf="isBasicUser">
+          <a
+            (click)="onHamburgerItemClick()"
             routerLink="/basic_user/services"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
