Users can book a service and add a dateTime and extra notes to the booking

--- a/src/app/admin/admin-homepage/admin-homepage.component.html
+++ b/src/app/admin/admin-homepage/admin-homepage.component.html
@@ -1,22 +1,19 @@
 <div class="centered-container">
-  <h2>All Services</h2>
-  <div class="mb-3">
-    <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()"
-              styleClass="p-button-text"></p-button>
-    <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>
-    <p-button type="button" icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()"
-              styleClass="p-button-text"></p-button>
-  </div>
   <div class="card">
     <p-table
       [value]="services"
       [paginator]="true"
-      [rows]="5"
+      [rows]="10"
       [showCurrentPageReport]="true"
       [tableStyle]="{ 'min-width': '50rem' }"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [rowsPerPageOptions]="[10, 25, 50]"
     >
+      <ng-template pTemplate="caption">
+        <tr>
+          All services
+        </tr>
+      </ng-template>
       <ng-template pTemplate="header">
         <tr>
           <th style="width:20%">Name</th>
