--- a/src/app/guest/homepage/homepage.component.html
+++ b/src/app/guest/homepage/homepage.component.html
@@ -1,3 +1,5 @@
+<div class="centered-container">
+
 <div class="mb-3">
   <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()" styleClass="p-button-text"></p-button>
   <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>
@@ -39,4 +41,5 @@
       <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
     </ng-template>
   </p-table>
+</div>
 </div>
