--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -92,7 +92,7 @@
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 pr-4 pl-3 rounded"
           >
-            All Services
+            Manage Services
           </a>
         </li>
 
