--- a/src/app/basic-user/overview/basic-user-homepage.component.html
+++ b/src/app/basic-user/overview/basic-user-homepage.component.html
@@ -1,7 +1,8 @@
 <div class="centered-container">
-  <h2>My Services</h2>
   <div class="card">
     <p-table
+      styleClass="p-datatable-gridlines"
+
       [value]="services"
       [paginator]="true"
       [rows]="5"
@@ -10,6 +11,11 @@
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [rowsPerPageOptions]="[10, 25, 50]"
     >
+      <ng-template pTemplate="caption">
+        <div class="flex table-title">
+          My Services
+        </div>
+      </ng-template>
       <ng-template pTemplate="header">
         <tr>
           <th style="width:33%">Name</th>
@@ -33,9 +39,13 @@
     </p-table>
   </div>
 
-  <h2>My Bookings</h2>
+  <br>
+  <br>
+
   <div class="card">
     <p-table
+      styleClass="p-datatable-gridlines"
+
       [value]="bookings"
       [paginator]="true"
       [rows]="5"
@@ -44,6 +54,11 @@
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [rowsPerPageOptions]="[10, 25, 50]"
     >
+      <ng-template pTemplate="caption">
+        <div class="flex table-title">
+          My Bookings
+        </div>
+      </ng-template>
       <ng-template pTemplate="header">
         <tr>
           <th style="width:25%">Description</th>
