--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,12 +1,12 @@
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
-    <a *ngIf="isBasicUser" href="/basic_user" class="flex items-center">
+    <a *ngIf="isBasicUser" href="" class="flex items-center">
       <span class="self-center text-xl font-semibold">Service Platform</span>
     </a>
-    <a *ngIf="isAdminUser" href="/admin" class="flex items-center">
+    <a *ngIf="isAdminUser" href="" class="flex items-center">
       <span class="self-center text-xl font-semibold">Service Platform</span>
     </a>
-    <a *ngIf="!isUserLoggedIn()" href="/guest" class="flex items-center">
+    <a *ngIf="!isUserLoggedIn()" href="" class="flex items-center">
       <span class="self-center text-xl font-semibold">Service Platform</span>
     </a>
     <button
@@ -44,7 +44,7 @@
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 pr-4 pl-3 rounded"
           >
-            All Services
+            Shop
           </a>
         </li>
 
@@ -97,6 +97,17 @@
         </li>
 
 
+        <li *ngIf="!isUserLoggedIn()">
+          <a
+            (click)="onHamburgerItemClick()"
+            routerLink="/guest"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 pr-4 pl-3 rounded"
+          >
+            Shop
+          </a>
+        </li>
         <!-- Login and Register buttons -->
         <li *ngIf="!isUserLoggedIn()">
           <a
@@ -109,6 +120,7 @@
             Login
           </a>
         </li>
+
         <li *ngIf="!isUserLoggedIn()">
           <a
             (click)="onHamburgerItemClick()"
@@ -119,13 +131,17 @@
           >
             Register
           </a>
+        </li>
+
+
+        <!--profile button and menu items after clicking it-->
+        <!-- Profile button with popup menu -->
         <li *ngIf="isUserLoggedIn()">
-          <button
-            class="block py-2 px-4 rounded text-sm font-medium text-white bg-red-500 hover:bg-red-600"
-            (click)="logout()"
-          >
-            Logout
+          <button #btn type="button"
+                  pButton icon="pi pi-user mr-2.5" (click)="menu.toggle($event)">{{ userInfo.name}}
+            <i class="pi pi-chevron-down ml-2.5"></i>
           </button>
+          <p-tieredMenu #menu [model]="items" [popup]="true"></p-tieredMenu>
         </li>
       </ul>
     </div>
