--- a/src/app/shared/register/register.component.html
+++ b/src/app/shared/register/register.component.html
@@ -1,29 +1,29 @@
 <div class="centered-container">
-  <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
+  <form (ngSubmit)="onSubmit()" #registerForm="ngForm" class="register-form">
     <div class="card">
       <div class="p-inputgroup">
-    <span class="p-inputgroup-addon">
-      <i class="pi pi-envelope"></i>
-    </span>
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-envelope"></i>
+        </span>
         <input pInputText type="email" placeholder="Email" [(ngModel)]="user.email" name="email" required/>
       </div>
 
       <div class="p-inputgroup">
-    <span class="p-inputgroup-addon">
-      <i class="pi pi-user"></i>
-    </span>
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-user"></i>
+        </span>
         <input pInputText type="text" placeholder="Name" [(ngModel)]="user.name" name="name" required/>
       </div>
 
       <div class="p-inputgroup">
-    <span class="p-inputgroup-addon">
-      <i class="pi pi-lock"></i>
-    </span>
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-lock"></i>
+        </span>
         <input pInputText pPassword type="password" placeholder="Password" [(ngModel)]="user.password" name="password"
                required/>
       </div>
 
-      <button pButton type="submit" label="Register" class="p-button-success"></button>
+      <button pButton type="submit" label="Register" class="p-button p-button-success register-button"></button>
     </div>
   </form>
 </div>
