--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,22 +1,22 @@
 <div class="centered-container">
-  <form (ngSubmit)="onSubmit()" #loginForm="ngForm" class="login-form">
+  <form [formGroup]="credentialsForm" class="login-form" (ngSubmit)="onSubmit()">
     <div class="card">
       <div class="p-inputgroup">
         <span class="p-inputgroup-addon">
           <i class="pi pi-envelope"></i>
         </span>
-        <input pInputText type="email" placeholder="Email" [(ngModel)]="credentials.email" name="email" required/>
+        <input pInputText type="email" placeholder="Email" formControlName="email" name="email"/>
       </div>
 
       <div class="p-inputgroup">
         <span class="p-inputgroup-addon">
           <i class="pi pi-lock"></i>
         </span>
-        <input pInputText pPassword type="password" placeholder="Password" [(ngModel)]="credentials.password"
-               name="password" required/>
+        <input pInputText pPassword type="password" placeholder="Password" formControlName="password"
+               name="password"/>
       </div>
 
-      <button pButton type="submit" label="Login" class="p-button p-button-success login-button"></button>
+      <button pButton type="submit" label="Login" [disabled]="credentialsForm.invalid" class="p-button p-button-success login-button"></button>
     </div>
   </form>
 </div>
