--- a/src/app/admin/service-management/admin-homepage.component.css
+++ b/src/app/admin/service-management/admin-homepage.component.css
@@ -1,6 +1,6 @@
 .submit-button {
-  background-color: #007bff; /* Set your desired background color */
-  color: white; /* Set your desired text color */
+  background-color: darkcyan;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
@@ -10,7 +10,7 @@
 }
 
 .submit-button:disabled {
-  background-color: #ccc; /* Set the disabled state background color */
+  background-color: #ccc;
   cursor: not-allowed;
 }
 
