--- a/src/app/basic-user/shop/all-services.component.css
+++ b/src/app/basic-user/shop/all-services.component.css
@@ -6,8 +6,8 @@
 }
 
 .submit-button {
-  background-color: #007bff; /* Set your desired background color */
-  color: white; /* Set your desired text color */
+  background-color: #007bff;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
@@ -17,7 +17,7 @@
 }
 
 .submit-button:disabled {
-  background-color: #ccc; /* Set the disabled state background color */
+  background-color: #ccc;
   cursor: not-allowed;
 }
 
