--- a/src/app/shared/navigation/navigation.component.css
+++ b/src/app/shared/navigation/navigation.component.css
@@ -5,8 +5,8 @@ nav a.active {
 
 
 li button {
-  background-color: darkcyan; /* Set your desired background color */
-  color: white; /* Set your desired text color */
+  background-color: darkcyan;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
